# ferres-db-python-sdk

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml
tests/: __init__.py  test_client.py  test_exceptions.py  test_models.py  test_realtime.py
vector_db_client/: __init__.py  client.py  exceptions.py  models.py  realtime.py
